@@ -4,8 +4,6 @@ import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Created by tully.
@@ -17,11 +15,16 @@ class ReflectionHelper {
 
     static <T> T instantiate(Class<T> type, Object... args) {
         try {
-            if (args.length == 0) return type.newInstance();
-            else return type.getConstructor(toClasses(args)).newInstance(args);
+            if (args.length == 0) {
+                return type.getDeclaredConstructor().newInstance();
+            } else {
+                Class<?>[] classes = toClasses(args);
+                return type.getDeclaredConstructor(classes).newInstance(args);
+            }
         } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             e.printStackTrace();
         }
+
         return null;
     }
 
@@ -30,7 +33,7 @@ class ReflectionHelper {
         boolean isAccessible = true;
         try {
             field = object.getClass().getDeclaredField(name); //getField() for public fields
-            isAccessible = field.isAccessible();
+            isAccessible = field.canAccess(object);
             field.setAccessible(true);
             return field.get(object);
         } catch (NoSuchFieldException | IllegalAccessException e) {
@@ -48,13 +51,15 @@ class ReflectionHelper {
         boolean isAccessible = true;
         try {
             field = object.getClass().getDeclaredField(name); //getField() for public fields
-            isAccessible = field.isAccessible();
+            isAccessible = field.canAccess(object);
             field.setAccessible(true);
             field.set(object, value);
         } catch (NoSuchFieldException | IllegalAccessException e) {
             e.printStackTrace();
         } finally {
-            if (field != null && !isAccessible) field.setAccessible(false);
+            if (field != null && !isAccessible) {
+                field.setAccessible(false);
+            }
         }
     }
 
@@ -63,21 +68,20 @@ class ReflectionHelper {
         boolean isAccessible = true;
         try {
             method = object.getClass().getDeclaredMethod(name, toClasses(args));
-            isAccessible = method.isAccessible();
+            isAccessible = method.canAccess(object);
             method.setAccessible(true);
             return method.invoke(object, args);
         } catch (IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             e.printStackTrace();
         } finally {
-            if (method != null && !isAccessible) method.setAccessible(false);
+            if (method != null && !isAccessible) {
+                method.setAccessible(false);
+            }
         }
         return null;
     }
 
     static private Class<?>[] toClasses(Object[] args) {
-        List<Class<?>> classes = Arrays.stream(args)
-                .map(Object::getClass)
-                .collect(Collectors.toList());
-        return classes.toArray(new Class<?>[classes.size()]);
+        return Arrays.stream(args).map(Object::getClass).toArray(Class<?>[]::new);
     }
 }
